# tephra2

./: CMakeLists.txt  col_steps.csv  grain_size_dist.txt  mass_initialisation.csv  node_
common_src/: parameters.h  prototypes.h  tephra2_calc.c
forward_src/: makefile  new_tephra.c
inputs/: const_wind  const_wind_hi  const_wind_low  const_wind_med  const_wind_no  exploding_grid.utm  fall_time_threshold_trial_grid.utm  noWind  plume_model_test.CONF.txt  tephra2.conf  test_config.conf  test_config_low_phi.txt  test_config_mhi_phi.txt  test_config_mid_phi.txt  wind1
inputs/ftt_trial_1/: ftt_0.conf  ftt_10000000.conf  ftt_10000000_out.txt  ftt_10800.conf  ftt_10800_out.txt  ftt_14400.conf  ftt_14400_out.txt  ftt_18000.conf  ftt_18000_out.txt  ftt_288.conf  ftt_3600.conf  ftt_3600_out.txt  ftt_7200.conf  ftt_7200_out.txt  ftt_trial_1_bash.sh  good_grid.txt
inputs/grid_trials/: c2.txt  c3.txt  c4.txt
inputs/plume_height_trial_10/: plume_height_trial_10.sh  plume_height_trial_10000.conf  plume_height_trial_11500.conf  plume_height_trial_13000.conf  plume_height_trial_14500.conf  plume_height_trial_16000.conf  plume_height_trial_17500.conf  plume_height_trial_19000.conf  plume_height_trial_20500.conf  plume_height_trial_22000.conf  plume_height_trial_23500.conf  plume_height_trial_25000.conf  plume_height_trial_26500.conf  plume_height_trial_28000.conf  plume_height_trial_29500.conf  plume_height_trial_31000.conf  plume_height_trial_32500.conf  plume_height_trial_34000.conf  (+4 more)
inversion_src/: makefile
out_files/: c1_out.txt  c4_out.txt  pulu_test.txt  test2.txt
